# BaslerArray

./: BaslerResources.txt  README.txt  repo.txt
BaslerArray/: BaslerArray.sln  camera_config.json
BaslerArray/SynchronizedSnapshots/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  CameraNode.cpp  CameraNode.h  SynchronizedSnapshots.cpp  SynchronizedSnapshots.vcxproj  SynchronizedSnapshots.vcxproj.filters  camera_config.json  camera_order.json  fileio.cpp  fileio.h
BaslerArray/SynchronizedSnapshots/configs/: CameraConfig.h  camera_config.json  camera_order.json  camera_order_2.json  config_loader.cpp  config_loader.h
BaslerArray/SynchronizedSnapshots/core/: Frame.h  SafeQueue.h
BaslerArray/SynchronizedSnapshots/utils/: file_io.cpp  file_io.h
